automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "favorite_destination()\n",
-    "travel_destinati\n",
+    "travel_destinations.append(favorite_desti)\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
