--- a/index.ipynb
+++ b/index.ipynb
@@ -188,13 +188,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'madagascar'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "favorite_destination()\n",
-    "travel_destinations.append(favorite_desti)\n",
+    "travel_destinations.append(favorite_destination())\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
