--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for in in travel_destinations:\n",
-    "        return "
+    "        return capitalize"
    ]
   },
   {
