--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for i in travel_destinations:\n",
-    "        travel_destinations[i].capitalize()"
+    "        travel_destinations[i].capitalize()\n",
+    " return travel_de"
    ]
   },
   {
