--- a/index.ipynb
+++ b/index.ipynb
@@ -218,15 +218,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<ipython-input-19-4c0cb644e74f>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-4c0cb644e74f>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return travel_destinations\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for i in travel_destinations:\n",
     "        travel_destinations[i].capitalize()\n",
-    " return travel_de"
+    " return travel_destinations"
    ]
   },
   {
