--- a/index.ipynb
+++ b/index.ipynb
@@ -224,8 +224,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for i in travel_destinations:\n",
-    "        i.capitalize()\n",
+    "    for cities in travel_destinations:\n",
+    "        cit.capitalize()\n",
     "        \n",
     "    return travel_destinations"
    ]
