--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for cities in travel_destinations:\n",
-    "        tracities.capitalize()\n",
+    "        travel_destinations[cities.capitalize()\n",
     "        \n",
     "    return travel_destinations"
    ]
