--- a/index.ipynb
+++ b/index.ipynb
@@ -218,14 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for cities in travel_destinations:\n",
-    "        travel_destinations['cities'].capitalize()\n",
+    "        tciti.capitalize()\n",
     "        \n",
     "    return travel_destinations"
    ]
