automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,6 +226,7 @@
     "def capitalize_countries():\n",
     "    for cities in travel_destinations:\n",
     "        cities.capitalize()\n",
+    "    return cities\n",
     "        "
    ]
   },
