--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    \n",
+    "    destinations =[]\n",
     "    for cities in travel_destinations:\n",
     "        return cities.capitalize()\n",
     "  \n",
