automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,8 @@
     "def capitalize_countries():\n",
     "    destinations =[]\n",
     "    for cities in travel_destinations:\n",
-    "        return cities.capitalize()\n",
+    "        destinations.append(cities.capitalize())\n",
+    "        \n",
     "  \n",
     "        "
    ]
