automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
     "def capitalize_countries():\n",
     "    destinations =[]\n",
     "    for cities in travel_destinations:\n",
-    "        destinations.append(cities.capitalize())\n",
+    "        destinations.append(cities.title())\n",
     "    return destinations()\n",
     "  \n",
     "        "
